<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".PlayerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtCountPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txtCountPlayer"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:gravity="center"
            android:text="@string/PlayerName"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtListNumberPlayer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/txtListNumberPlayer"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/txtSumPlayer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/txtSumPlayer"
                android:textSize="34sp" />
        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioPlayerEven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/txtEvenPlayer"
                android:textSize="28sp" />

            <ImageView
                android:id="@+id/ImagePlayerEven"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:scaleType="fitCenter"
                android:src="@android:drawable/alert_dark_frame"
                android:visibility="invisible"
                app:srcCompat="@drawable/okimage" />

            <RadioButton
                android:id="@+id/radioPLayerUneven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/txtUnevenPlayer"
                android:textSize="28sp" />

            <ImageView
                android:id="@+id/ImagePlayerUneven"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:src="@android:drawable/alert_dark_frame"
                android:visibility="invisible"
                app:srcCompat="@drawable/notimage" />
        </RadioGroup>


    </LinearLayout>
</FrameLayout>