<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComputerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtListNumberCom"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/txtListNumberCom"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/txtSumCom"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/txtSumCom"
                android:textSize="34sp" />

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioComEven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:enabled="false"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/txtEvenCom"
                android:textSize="28sp" />

            <ImageView
                android:id="@+id/ImageComEven"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:scaleType="fitCenter"
                android:src="@android:drawable/alert_dark_frame"
                android:visibility="invisible"
                app:srcCompat="@drawable/okimage" />

            <RadioButton
                android:id="@+id/radioComUneven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:enabled="false"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/txtUnevenCom"
                android:textSize="28sp" />

            <ImageView
                android:id="@+id/ImageComUneven"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:src="@android:drawable/alert_dark_frame"
                android:visibility="invisible"
                app:srcCompat="@drawable/notimage" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:text="@string/ComputerName"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/txtCountComp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:text="@string/txtCountCom"
            android:textSize="60sp" />

    </LinearLayout>
</FrameLayout>